Fix mobile header alignment, modularize font-size

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -2,15 +2,20 @@
     --primary-color: #14213d;
     --secondary-color: #fca311;
     --alternative-color: #e5e5e5;
+
+    --title-font-size: 24px;
+    --subtitle-font-size: 20px;
+    --text-font-size: 16px;
 }
 
 body{
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     margin: 0px;
 
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: var(--text-font-size);
     margin: 0;
 }
 
@@ -27,7 +32,7 @@ body{
     border-bottom: #000 solid 2px;
     text-align: center;
     padding: 20px 64px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
     color: #fff;
 
     position: sticky;
@@ -50,6 +55,8 @@ body{
     text-decoration: none;
     color: #fff;
     font-weight: bold;
+
+    font-size: var(--title-font-size);
 }
 
 .home,.about,.contact{
@@ -88,7 +95,7 @@ body{
     display: flex;
     flex-direction: column;
 
-    font-size: 12px;
+    font-size: var(--subtitle-font-size);
     text-decoration: none;
     color: #fff;
     font-weight: lighter;
