--- a/css/index-style.css
+++ b/css/index-style.css
@@ -29,7 +29,7 @@
 }
 
 .card-title{
-    font-size: 22px;
+    font-size: var(--title-font-size);
     font-weight: bold;
     margin-bottom: 2px;
     text-align: center;
